2022-03-08  Jose E. Marchesi  <jemarch@gnu.org>

	* etc/poke.rec (Support nested integral structs): Removed as done.
	(`load' doesn't load after an error): Likewise.
	(Add an elisp MI interface to poke.el): Removed as wont happen.
	(Auto-complete value attributes): Removed as done.
	(Use json-c instead of tcllib json modules in the GUI): Removed as
	wont happen.
	(Auto-complete yes|no in commands): Removed as done.
	(support references to values in the MI protocol): Removed as wont
	happen.

2022-03-08  Jose E. Marchesi  <jemarch@gnu.org>

	* configure.ac: Remove gl-poked/Makefile.
	* Makefile.am (ACLOCAL_AMFLAGS): Do not include m4/poked.
	(SUBDIRS): Remove gl-poked.
	* bootstrap.conf (ACLOCAL_FLAGS): Likewise.
	Remove poked_modules.
	* poked/Makefile.am (poked_LDADD): Use the gnulib in gl/.

2022-03-08  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/libpoke.c (pk_call): Expose exit_exception in the
	interface.
	* libpoke/libpoke.h: Change prototype accordingly.
	* poke/pk-cmd-help.c (pk_cmd_help): Adapt accordingly.
	* poke/pk-cmd-set.c (pk_cmd_set_dump): Likewise.
	(pk_cmd_set): Likewise.
	(pk_cmd_set): Likewise.
	* poke/pk-hserver.c (pk_hserver_get_token): Likewise.
	(pk_hserver_token_p): Likewise.
	(pk_hserver_cmd): Likewise.
	(read_from_client): Likewise.
	(pk_hserver_make_hyperlink): Likewise.
	* poke/poke.c (poke_handle_exception): Likewise.
	* poked/poked.c (poked_buf_send): Likewise.
	(main): Likewise.
	(poked_free): Likewise.

2022-03-08  Jose E. Marchesi  <jemarch@gnu.org>

	* pickles/leb128.pk (LEB128.value): Really allow up to 64-bit
	integers and fix calculation of the return value.
	(ULEB128.value): Likewise.
	Reported and fixed by bjorn3 in the IRC channel.

2022-02-07  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>

	* poked/usock.c (usock_client_step): Handle zero-length payloads.

2022-03-07  Daiki Ueno  <ueno@gnu.org>

	* pickles/asn1-ber.pk (BER_Identifier): Fix long-form tag number
	handling.