@@ -1,0 +1,5 @@
+/* { dg-do run } */
+
+/* { dg-command {.set obase 10} } */
+/* { dg-command {format("v%%%%j%%abc%%")} } */
+/* { dg-output {"v%%j%abc%"} } */
